fix overflow mobile

--- a/style.css
+++ b/style.css
@@ -12,6 +12,12 @@
   scroll-behavior: smooth;
 }
 
+body {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
+
 h1,
 h2,
 h3,
@@ -81,15 +87,9 @@ h7 {
   display: inline-block;
 }
 
-body {
-  margin: 0;
-  padding: 0;
-  overflow-x: hidden;
-}
-
 .navbar {
   position: fixed;
-  width: 100%;
+  width: 100vw;
 
   display: flex;
   flex-direction: row-reverse;
@@ -183,6 +183,7 @@ body {
     var(--bg-color) 100%
   );
   height: 40%;
+  overflow-x: hidden;
 }
 
 .cont {
@@ -231,6 +232,7 @@ body {
 
 .story {
   display: flex;
+  overflow-x: hidden;
   flex-direction: column;
   padding: 50px 0px 100px 0px;
   margin: 0px 30px;
